--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: packages-${{ matrix.release }}-${{ matrix.arch }}
-          path: bin/packages/${{ matrix.arch }}/packages_custom/*.ipk
+          path: |
+            bin/packages/${{ matrix.arch }}/packages_custom/*.ipk
+            bin/packages/${{ matrix.arch }}/packages_custom/*.apk
 
       - name: Store logs
         uses: actions/upload-artifact@v4
@@ -114,8 +116,10 @@ jobs:
             if [ -d "$dir" ]; then
               arch=$(echo "$dir" | sed 's/packages-${{ matrix.release }}-\(.*\)\//\1/')
               mkdir -p "../releases/${{ matrix.release }}/$arch"
-              if [ -n "$(find "$dir" -name "*.ipk" 2>/dev/null)" ]; then
+              # Copy both ipk and apk files
+              if [ -n "$(find "$dir" -name "*.ipk" -o -name "*.apk" 2>/dev/null)" ]; then
                 cp "$dir"/*.ipk "../releases/${{ matrix.release }}/$arch/" 2>/dev/null || true
+                cp "$dir"/*.apk "../releases/${{ matrix.release }}/$arch/" 2>/dev/null || true
               fi
             fi
           done
@@ -124,20 +128,30 @@ jobs:
         run: |
           cd releases/${{ matrix.release }}
           for arch_dir in */; do
-            if [ -d "$arch_dir" ] && [ -n "$(find "$arch_dir" -name "*.ipk" 2>/dev/null)" ]; then
+            if [ -d "$arch_dir" ] && [ -n "$(find "$arch_dir" -name "*.ipk" -o -name "*.apk" 2>/dev/null)" ]; then
               arch=$(basename "$arch_dir")
               echo "Generating index for $arch"
               cd "$arch_dir"
               
-              # Create Packages file
-              for ipk in *.ipk; do
-                if [ -f "$ipk" ]; then
-                  echo "Package: $(basename "$ipk" .ipk)"
+              # Create Packages file for both ipk and apk
+              for pkg in *.ipk *.apk; do
+                if [ -f "$pkg" ]; then
+                  # Get package extension
+                  ext="${pkg##*.}"
+                  # Get package name without extension
+                  pkg_name=$(basename "$pkg" .$ext)
+                  
+                  echo "Package: $pkg_name"
                   echo "Version: $(date +%Y%m%d)"
                   echo "Architecture: $arch"
-                  echo "Filename: $ipk"
-                  echo "Size: $(stat -c%s "$ipk")"
-                  echo "SHA256sum: $(sha256sum "$ipk" | cut -d' ' -f1)"
+                  echo "Filename: $pkg"
+                  echo "Size: $(stat -c%s "$pkg")"
+                  echo "SHA256sum: $(sha256sum "$pkg" | cut -d' ' -f1)"
+                  if [ "$ext" = "apk" ]; then
+                    echo "Format: apk"
+                  else
+                    echo "Format: ipk"
+                  fi
                   echo ""
                 fi
               done > Packages
@@ -158,22 +172,25 @@ jobs:
           Built on: $(date)
           Commit: ${{ github.sha }}
           
+          ## Package Format
+          $(if [ "${{ matrix.release }}" = "snapshot" ]; then echo "- Format: APK (Alpine Package Keeper)"; else echo "- Format: IPK (Itsy Package)"; fi)
+          
           ## Available Architectures
           
           EOF
           
           for arch_dir in */; do
-            if [ -d "$arch_dir" ] && [ -n "$(find "$arch_dir" -name "*.ipk" 2>/dev/null)" ]; then
+            if [ -d "$arch_dir" ] && [ -n "$(find "$arch_dir" -name "*.ipk" -o -name "*.apk" 2>/dev/null)" ]; then
               arch=$(basename "$arch_dir")
-              count=$(find "$arch_dir" -name "*.ipk" | wc -l)
+              count=$(find "$arch_dir" -name "*.ipk" -o -name "*.apk" | wc -l)
               echo "- $arch ($count packages)" >> README.md
             fi
           done
 
       - name: Deploy to releases branch
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           
           # Create or switch to releases branch
           git fetch origin releases:releases 2>/dev/null || true
