--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,6 +77,7 @@ jobs:
         env:
           ARCH: ${{ matrix.arch }}-${{ matrix.branch }}
           FEEDNAME: packages_custom
+          INDEX: 1
           FEED_DIR: ${{ github.workspace }}/packages
         continue-on-error: true
 
