`Update git config commands in upstream workflow to use --global instead of --local`

--- a/.github/workflows/upstream.yaml
+++ b/.github/workflows/upstream.yaml
@@ -58,8 +58,8 @@ jobs:
     - name: Commit and push changes
       if: steps.check_changes.outputs.changes == 'true'
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
         
         git add packages/
         git commit -m "Auto-sync: Update KWRT packages from upstream $(date +'%Y-%m-%d %H:%M:%S')"
