--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -310,7 +310,7 @@ jobs:
             echo "| Item | Value |"
             echo "|------|-------|"
             echo "| 📅 **Build Date** | \`$(date -u '+%Y-%m-%d %H:%M:%S UTC')\` |"
-            echo "| 🔗 **Commit** | [\`${{ github.sha:0:7}}\`](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}) |"
+            echo "| 🔗 **Commit** | [\`${{ substr(github.sha, 0, 7) }}\`](${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}) |"
             echo "| 🌿 **Branch** | \`${{ github.ref_name }}\` |"
             echo "| 📦 **Total Packages** | \`${{ needs.prepare.outputs.total-packages }}\` |"
             echo "| 🚀 **Trigger** | \`${{ github.event_name }}\` |"
@@ -498,7 +498,7 @@ jobs:
             echo "| Item | Details |"
             echo "|------|---------|"
             echo "| 🏗️ **Built** | $(date -u '+%Y-%m-%d %H:%M:%S UTC') |"
-            echo "| 📝 **Commit** | [\`${{ github.sha:0:7}}\`](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) |"
+            echo "| 📝 **Commit** | [\`${{ substr(github.sha, 0, 7) }}\`](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) |"
             echo "| 🌿 **Branch** | \`${{ github.ref_name }}\` |"
             echo "| 📦 **Format** | $format_name |"
             echo "| 🏗️ **Architectures** | ${{ steps.organize.outputs.total-archs }} |"
