--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -206,6 +206,9 @@ jobs:
         env:
           ARCH: ${{ matrix.arch }}-${{ matrix.branch }}
           FEEDNAME: packages_custom
+          FEED_DIR: packages
+          INDEX: 1
+          NO_REFRESH_CHECK: true
           FORCE_REBUILD: ${{ github.event.inputs.force_rebuild }}
 
       - name: 🔍 Analyze Build Results
