`Update FEED_DIR environment variable to ./packages/ in build and test workflows`

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -206,7 +206,7 @@ jobs:
         env:
           ARCH: ${{ matrix.arch }}-${{ matrix.branch }}
           FEEDNAME: packages_custom
-          FEED_DIR: packages
+          FEED_DIR: ./packages/
           INDEX: 1
           NO_REFRESH_CHECK: true
           FORCE_REBUILD: ${{ github.event.inputs.force_rebuild }}
