`Update Git configuration in test workflow to use global settings`

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -98,8 +98,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
 
       - name: Download all build artifacts
         uses: actions/download-artifact@v4
