"Added IGNORE_ERRORS option to test workflow configuration"

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -209,6 +209,7 @@ jobs:
           FEED_DIR: ./packages
           INDEX: 1
           NO_REFRESH_CHECK: true
+          IGNORE_ERRORS: true
 
       - name: 🔍 Analyze Build Results
         id: analyze-build
